<resources>
    <string name="app_name">HCMS</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="slide_1_title">Daily Workout</string>
    <string name="slide_1_desc">Set your daily workout routine by the help of trainer</string>
    <string name="slide_2_title">Meditation Techniques </string>
    <string name="slide_2_desc">Learn about the different meditation techniques and practice them</string>
    <string name="slide_3_title">Diet Chart</string>
    <string name="slide_3_desc">Make your diet chart by the help of health experts</string>
    <string name="Welcome">Welcome</string>
    <string name="choose">Choose Language</string>
    <string name="health">Health Care Management system</string>
    <string name="login">Login</string>
    <string name="login_activities">Login Here</string>
    <string name="about">About Us</string>
    <string name="about_activities">Hospital InfraStructure</string>
    <string name="contact">Contact Us</string>
    <string name="contact_activities">Clarify Your Details</string>
    <string name="developed">Developed by</string>
    <string name="name">G BHARGAV</string>
    <string name="text">Please Feel Free Us to Contact to clarify your doubts and improve your application status</string>
    <string name="email">Email</string>
    <string name="emailid">bhargav.gurramkonda@gmail.com</string>
    <string name="contact1">Contact</string>
    <string name="phone">9492515352</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="link_to_register">Register Here</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="portal">Portal Page</string>
    <string name="sign_in_short">Register</string>
    <string name="link_to_login">Already registered.Login Here!</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="reset_password">Reset Password</string>
    <string name="back">Back</string>
    <string name="admin">Admin</string>
    <string name="admin_details">Admin Details</string>
    <string name="doctor">Doctor</string>
    <string name="doctor_activities">Doctor Details</string>
    <string name="message">Message</string>
    <string name="message_me">Message to Doctor and Admin</string>
    <string name="call">Call</string>
    <string name="call_me">Call to Doctor and Admin</string>
    <string name="feedback">Feedback</string>
    <string name="livechat_userinfo">Live Chat and User Info</string>
    <string name="livechatuserinfo">LC and UI</string>
    <string name="googlemap">Google Map</string>
    <string name="google_map">Navigate Nearby Hospitals</string>
    <string name="totalhealth">Total Health Tips</string>
    <string name="totalhealth_me">Total Health Care Tips</string>
    <string name="tophospital">Top Hospitals</string>
    <string name="vitamins">Vitamins</string>
    <string name="vitamina">Vitamin A</string>
    <string name="vitaminb1">Vitamin B1</string>
    <string name="vitaminb2">Vitamin B2</string>
    <string name="vitaminb3">Vitamin B3</string>
    <string name="vitaminb5">Vitamin B5</string>
    <string name="vitaminb6">Vitamin B6</string>
    <string name="vitaminb7">Vitamin B7</string>
    <string name="vitaminb9">Vitamin B9</string>
    <string name="vitaminb12">Vitamin B12</string>
    <string name="vitaminc">Vitamin C</string>
    <string name="vitamind">Vitamin D</string>
    <string name="vitamine">Vitamin E</string>
    <string name="vitamink">Vitamin K</string>
    <string name="diet1head">7 DAYS DIET PLAN</string>
    <string name="diet1sub">Lose 3-5 Kgs in a Week</string>
    <string name="diet1sub1">THE 7 DAY DIET PLAN FOR WEIGHT LOSS</string>
    <string name="diet1sub2">What? Just 7 days and we lose those unwanted fat from our body ...isn\'t that great. Yes, it is, with this diet plan one is able to lose 5-10 pounds and help oneself achieve their desirable weight and body shape. This diet is also known as the GM-Diet plan which was made for the motor workers to stay fit and healthy. This diet plan just takes little of your dedication and gives you your desirable goal. So are you all ready to get a new look ?</string>
    <string name="diet1sub3">Advantages of GM Diet Plan:</string>
    <string name="diet1sub4">This 7 day vegetarian diet plan was developed for the well being of General Motors Inc. employees. That is the reason it is called the GM Diet Plan. The aim of the program is to gain a healthy body. You can expect the following things by practicing this Diet Plan regime:\n\n1. Lose around 5 to 8 kilograms in 7 days Natural glow to skin.\n2. Elimination of toxins will make you feel light and energetic.\n3. Reduces the flab around the tummy and waist.\n\nAll these in just 7 days! It is a miracle diet plan!\n\n[NOTE: DO DRINK PLENTY OF WATER DURING YOUR DIET 8-10 GLASS OF WATER.]</string>
    <string name="diet1day1">##Day One##</string>
    <string name="diet1day1sub">Let\'s start with day one, on the first day of your diet you have to consume only fruits for the day as it is an all-fruit-day. Fruits are great for our health full of benefits and one must include fruits in their diet. Fruits not only help to lose weight but provide you with glowing and flawless skin and many nutrients required by your body. You are allowed to consume any fruit of your choice for the day and in any number (except banana). But do remember to divide your intakes in different numbers for the day. Eat in small quantity but more often. I would suggest to indulge on melons for the day as it will help to lose 1 pound of your weight on the very first day.(say NO to bananas).</string>
    <string name="diet1day2">##Day Two##</string>
    <string name="diet1day2sub">Like the first day, the second day is "AllVeggies day". You can eat nothing but vegetables and only vegetables. You can eat to your heart\'s content, feel your stomach filled up with vegetables if you need to. Boiled or raw vegetables will do. You can even begin your day with a boiled potato and a tea spoon of butter. This is done in order to give the body enough energy and carbohydrates for the day. But after that only raw and boiled vegetables. Only one potato this day is enough, don\'t consume more than that. Adding a pinch of oregano or basil seasoning to make the vegetables more edible is perfect. Day 2 is a calorie free day with a good amount of fibre and nutrients. If you make it through day two, you are definitely dedicated!</string>
    <string name="diet1day3">##Day Three##</string>
    <string name="diet1day3sub">Day 3 is a combination of day 1 and 2. You can eat the mentioned fruits and vegetables. Eat any quantity and any amount you like and drink lots of water as directed. You need to avoid potatoes on day 3 as you are getting enough carbohydrates supply from the fruits. Your system is all set to burn the excess pounds. Your cravings may try to dominate, but think about the weight loss and the great results. You will feel light and happy by this time.</string>
    <string name="diet1day4">##Day Four##</string>
    <string name="diet1day4sub">Remember how you were told not to eat bananas on the first three days? Well on the 4th day of the vegetarian diet for losing weight, you have the liberty to eat up to 6 bananas for the whole day. You can drink up to 4 glasses of milk. You must have heard that bananas help in weight gain, however in this diet, they act as a source of potassium and sodium for the body. Since the intake of salt is reduced, bananas will do the job. You can also have one cup of a highly diluted soup for a meal. The soup should consist of capsicum, onions, garlic and tomatoes. It is a tasty and healthy recipe which will help in the weight loss process. You can drink it only 1 time a day, it is only to refresh your taste buds from all the vegetable and fruit intake. Be careful to resist yourself. You are just 3 days far from your dream figure.</string>
    <string name="diet1day5">##Day Five##</string>
    <string name="diet1day5sub">Day five is like a treat for you as on this day you can consume all the tasty but very healthy meals like tomatoes, sprouts and cottage cheese, also known as Paneer in India. You can also add Soya chunks to your meal. Make a tasty soup with the mentioned ingredients and drink it. Make sure to increase your water intake on day 5. You can eat up to 6 tomatoes and increase the water intake with 1/4 of the daily consumption. This is done in order to cleanse your body from uric acid. The tomatoes are for the fibre and digestion process. The water will purify your body from all kinds of toxins.</string>
    <string name="diet1day6">##Day Six##</string>
    <string name="diet1day6sub">Day 6 is a little different to day 5. You will be eating sprouts, cottage cheese and other vegetables but by excluding tomatoes. No tomatoes on day 6, avoid them. The tasty soup and lots of water should help you through your day. Vegetables will provide vitamins and fibre to your body. You will already notice change in your body by this time. Continue consuming a good amount of water everyday.</string>
    <string name="diet1day7">##Day Seven##</string>
    <string name="diet1day7sub">THE LAST DAY of your diet. You will be feeling light on your toes and happy inside out. You can have fresh fruit juice, one cup of brown rice or half chapati/bread and other vegetables you would want to eat. You can complete your day with the consumption of water.That is the whole diet plan for 7 days. If you can follow it strictly, no one can stop you from gaining a healthy and slimmer body.</string>
    <string name="mon">Monday:</string>
    <string name="mon1">Cardio exercise for 30-45 minutes. It can be anything like running, jogging, walking, Dancing, etc. Do this twice in the day for eg morning and evening. You can jog/run/walk during morning time and dance on your favorite beat at evening or do other exercise such as jump squat, skipping, etc.</string>
    <string name="tue">Tuesday:</string>
    <string name="tue1">Total body strength training such as squats, crunches, step-up bicep curls, etc.on this day. Strength training and cardio must be balanced for great results.</string>
    <string name="wed">Wednesday:</string>
    <string name="wed1">Take rest or you can get involved in yoga or stretching to relax your muscles from the intense workout.</string>
    <string name="thur">Thursday:</string>
    <string name="thur1">Today again is the day of cardio for 30 mins.</string>
    <string name="fri">Friday:</string>
    <string name="fri1">Total body strength training.</string>
    <string name="sat">Saturday:</string>
    <string name="sat1">Cardio exercise.</string>
    <string name="sun">Sunday:</string>
    <string name="sun1">Take rest and relax.</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_admin">Admin Details</string>
    <string name="title_activity_doctor">Doctor Details</string>
    <string name="title_activity_google_map">Google Map</string>
    <string name="title_activity_top_hsp">Top 15 Hospitals in India</string>
    <string name="title_activity_hospital">Hospitals in INDIA</string>
    <string name="title_activity_donate_bld">Donate Blood</string>
    <string name="title_activity_msg">Message</string>
    <string name="title_activity_calls">Call</string>
    <string name="title_activity_alrm">Alarm</string>
    <string name="communicate">Communicate</string>
    <string name="daily_tips">Daily Tips</string>
    <string name="others">Others</string>
    <string name="login1">Login....</string>
</resources>