<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/vitamina"
        android:id="@+id/title1"
        app:showAsAction="never"/>
    <item
        android:title="@string/vitaminb1"
        android:id="@+id/title2"
        app:showAsAction="never"/>
    <item
        android:title="@string/vitaminb2"
        android:id="@+id/title3"
        app:showAsAction="never"/>
    <item
        android:title="@string/vitaminb3"
        android:id="@+id/title4"
        app:showAsAction="never"/>
    <item
        android:title="@string/vitaminb5"
        android:id="@+id/title5"
        app:showAsAction="never"/>
    <item
        android:title="@string/vitaminb6"
        android:id="@+id/title6"
        app:showAsAction="never"/>
    <item
        android:title="@string/vitaminb7"
        android:id="@+id/title7"
        app:showAsAction="never"/>
    <item
        android:title="@string/vitaminb9"
        android:id="@+id/title8"
        app:showAsAction="never"/>
    <item
        android:title="@string/vitaminb12"
        android:id="@+id/title9"
        app:showAsAction="never"/>
    <item
        android:title="@string/vitaminc"
        android:id="@+id/title10"
        app:showAsAction="never"/>
    <item
        android:title="@string/vitamind"
        android:id="@+id/title11"
        app:showAsAction="never"/>
    <item
        android:title="@string/vitamine"
        android:id="@+id/title12"
        app:showAsAction="never"/>
    <item
        android:title="@string/vitamink"
        android:id="@+id/title13"
        app:showAsAction="never"/>

    <item
        android:title="home"
        android:id="@+id/title14"
        android:icon="@drawable/home"
        app:showAsAction="always"/>

    <item
        android:title="logout"
        android:id="@+id/title15"
        android:icon="@drawable/logout"
        app:showAsAction="always"/>

</menu>