<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/diet1head"
                android:gravity="center"
                android:textSize="30dp"
                android:textColor="@color/dot_inactive_screen2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:text="@string/diet1sub"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/diet1"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/diet1sub1"
                android:gravity="center"
                android:textSize="23dp"
                android:textColor="@color/dot_inactive_screen2"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/diet1sub2"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/diet1sub3"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="25dp"
                android:textColor="@color/LightBlue"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/diet1sub4"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/diet1day1"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="23dp"
                android:textColor="@color/dot_inactive_screen2"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/diet1day1sub"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/diet1day2"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="23dp"
                android:textColor="@color/dot_inactive_screen2"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/diet1day2sub"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/diet1day3"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="23dp"
                android:textColor="@color/dot_inactive_screen2"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/diet1day3sub"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/diet1day4"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="23dp"
                android:textColor="@color/dot_inactive_screen2"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/diet1day4sub"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/diet1day5"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="23dp"
                android:textColor="@color/dot_inactive_screen2"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/diet1day5sub"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/diet1day6"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="23dp"
                android:textColor="@color/dot_inactive_screen2"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/diet1day6sub"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/diet1day7"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="23dp"
                android:textColor="@color/dot_inactive_screen2"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/diet1day7sub"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"/>

            </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</LinearLayout>