<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/mon"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/mon1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tue"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tue1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/wed"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/wed1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/thur"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/thur1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fri"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fri1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sat"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sat1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sun"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sun1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"/>

            </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>