<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="Hello"
        app:showAsAction="always"
        android:icon="@drawable/ic_more">
        <menu>

    <item
        android:title="@string/about"
        android:icon="@drawable/about_us"
        android:orderInCategory="100"
        android:id="@+id/title1"
        app:showAsAction="never"/>
    <item
        android:title="@string/contact"
        android:icon="@drawable/ic_call"
        android:orderInCategory="100"
        android:id="@+id/title2"
        app:showAsAction="never"/>
    <item
        android:title="@string/feedback"
        android:icon="@drawable/feedback"
        android:orderInCategory="100"
        android:id="@+id/title3"
        app:showAsAction="never"/>

        </menu>
    </item>

</menu>